# hri_planner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
include/hri_planner/: comm_planner.h  controller_node.h  cost_feature.h  cost_feature_bases.h  cost_features.h  cost_features_vectorized.h  cost_probabilistic.h  costs.h  dynamics.h  human_belief_model.h  human_belief_model_old.h  optimizer.h  planner.h  planner_node.h  shared_config.h  trajectory.h
include/hri_planner_sim/: social_force.h  social_force_sim.h
include/social_force/: comm_planner.h  social_force_sim.h
include/top_view_tracker/: hat_tracker.h  video_processor.h
include/utils/: utils.h
launch/human_tracking_and_nav/: human_aware_navigation.launch  people_tracker_robot.launch  people_velocity_tracker.launch  view_navigation.launch
launch/planner/: controller.launch  exp_manager.launch  planner_exp.launch  test_planner_simulation.launch
launch/robot_bringup/: turtlebot_bringup.launch
launch/simulation/: planner_sim.launch  planner_sim_bkp.launch
launch/slam_and_movebase/: amcl_demo.launch  move_base.launch.xml  movebase_demo.launch  turtlebot_bringup.launch  turtlebot_gmapping.launch
launch/video_processing/: video_processing.launch  view_navigation.launch
msg/: HumanStat.msg  PlannedTrajectories.msg  TrackedHumans.msg
resource/models/corridor_simple/: model.config
resources/camera/: gopro1440.yml
resources/exp_protocols/: protocol-45.txt  protocol-test.txt  protocol.txt  protocol0.txt  protocol45.txt
resources/exp_protocols/uniform/: protocol0.txt
resources/maps/: corridor_simple.pgm  corridor_simple.yaml
resources/models/corridor_simple/: model.sdf
resources/models/robots/: asl_turtlebot.urdf.xacro
resources/nav_param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  nav_goals.yaml
resources/planner_setting/: exp_settings_common.yaml  exp_settings_hp.yaml  exp_settings_rp.yaml  test_settings.yaml  test_settings_T6.yaml  test_settings_common.yaml  test_settings_hp.yaml  test_settings_rp.yaml
resources/rviz/: view_exp.rviz
resources/sim_setting/: default.json
resources/video_processing/: general_settings.yaml  hat_tracking.json  hat_tracking_one_hat.json  hat_tracking_two_hats.json  human_heights.yaml  path_settings.yaml  processor_setting.yaml
resources/video_processing_setting/: test.json
resources/world/: corridor_with_human.world  corridor_without_human.world  two_human.world
scripts/IRL/: cross_validation.py  data_filter.py  data_loader.py  distance.py  dynamics.py  features.py  features_const_acc.py  features_th.py  irl.py  irl_planning.py  irl_prediction.py  irl_prediction_th.py  irl_training.py  irl_training_th.py  irl_visualization.py  utils.py
scripts/IRL/manual_gradient/: irl_training.py
scripts/IRL/multi_human/: features_const_vel.py  irl_planning.py
scripts/hri/: exp_data_processing.py  exp_data_statistics.py  experiment_manager.py  hri_nav_goal.py  human_traj_generator.py  planner_component_tester.py  planner_simulator.py  planner_tester.py  planner_vel_smoother.py  plotting_utils.py  protocal_gen.py  test_human_tracking.py
scripts/simulation/: social_force_world.py
src/: comm_planner.cpp  social_force.cpp  social_force_sim.cpp
src/hri_planner/: component_test.cpp  controller_node.cpp  cost_feature.cpp  cost_feature_bases.cpp  cost_features.cpp  cost_features_vectorized.cpp  cost_probabilistic.cpp  costs.cpp  dynamics.cpp  fake_tracker.cpp  human_belief_model.cpp  human_belief_model_old.cpp  optimizer.cpp  planner.cpp  planner_node.cpp  shared_config.cpp  trajectory.cpp
src/nodes/: fake_localizer.cpp
src/planner_nodes/: comm_planner_node.cpp  social_force_sim_node.cpp
src/social_force/: comm_planner.cpp  comm_planner_node.cpp  social_force.cpp  social_force_sim.cpp  social_force_sim_node.cpp
src/top_view_tracker/: hat_tracker.cpp  video_processor.cpp
src/utils/: utils.cpp
srv/: BeliefUpdate.srv  TestComponent.srv
